# jx-42

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DATA_MODEL.md  MILESTONES.md  MILESTONE_0_SUMMARY.md  POLICIES.md  README.md  SPEC.md  main.py  pyproject.toml  system_index.yaml
.github/instructions/: agent_onboarding.instructions.md  python_tooling.instructions.md
.github/workflows/: ci.yml
docs/: 2026-02-21-ai-design-review.md  decision-log.md  diagrams.md  threat-model-lite.md
examples/: finance_sample_inputs.md  investing_strategy_example.md
jx42/: __init__.py  audit.py  cli.py  finance.py  investing.py  kernel.py  memory.py  models.py  policy.py  storage.py  validation.py
prompts/: finance_program.system.md  investing_program.system.md  jx42.style.md  k2so.style.md  kernel.system.md  policy_guardian.system.md
schemas/: audit_event.schema.json  finance_ledger.schema.json  investing_trade_ticket.schema.json
tests/: __init__.py  test_audit.py  test_cli_golden.py  test_finance.py  test_investing.py  test_kernel.py  test_memory.py  test_policy.py  test_storage.py  test_validation.py
