[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jx42*"]

[project]
name = "jx-42"
version = "0.1.0"
description = "JX-42 personal assistant kernel with safe-by-default orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
jx-42 = "jx42.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
